--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -65,10 +65,11 @@
   display: block;
 }
 .formControl .inputField {
-  width: 100%;
-  border: 1px solid #ff5502;
-  height: 50px;
-  border-radius: 8px;
+    width: 100%;
+    border: 1px solid #ff5502;
+    height: 50px;
+    border-radius: 8px;
+    
 }
 .formControl input::placeholder,
 .formControl textarea::placeholder,
@@ -77,12 +78,17 @@
   padding-left: 5px;
   font-size: 14px;
 }
+.formControl :where(textarea, .inputField){
+  padding-left: 10px;
+}
 .formControl textarea {
   border: 1px solid #ff5502;
   resize: none;
   width: 100%;
   height: 150px;
   border-radius: 12px;
+  padding-top:10px;
+
 }
 .sendMessageBtn {
   background: #ff5502;
